added test vm sys mem and jvm mem configuration info